--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "json": "^10.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
